--- a/test/Makefile
+++ b/test/Makefile
@@ -107,7 +107,8 @@ test_ins8060: test_asm_ins8060 test_dis_ins8060
 test_ins8070: test_asm_ins8070 test_dis_ins8070
 	./test_asm_ins8070
 	./test_dis_ins8070
-test_cdp1802: test_dis_cdp1802
+test_cdp1802: test_asm_cdp1802 test_dis_cdp1802
+	./test_asm_cdp1802
 	./test_dis_cdp1802
 test_mc68000: test_asm_mc68000 test_dis_mc68000
 	./test_asm_mc68000
@@ -137,7 +138,7 @@ TEST_OBJS= \
 	test_asm_z80.o     test_dis_z80.o     \
 	test_asm_ins8060.o test_dis_ins8060.o \
 	test_asm_ins8070.o test_dis_ins8070.o \
-	                   test_dis_cdp1802.o \
+	test_asm_cdp1802.o test_dis_cdp1802.o \
 	test_asm_tms9900.o test_dis_tms9900.o \
 	test_asm_mc68000.o test_dis_mc68000.o \
 	test_expr_moto.o   test_expr_intel.o  \
@@ -177,7 +178,7 @@ OBJS	 = \
 	$(OBJS_Z80)     asm_z80.o     dis_z80.o     \
 	$(OBJS_ins8060) asm_ins8060.o dis_ins8060.o \
 	$(OBJS_ins8070) asm_ins8070.o dis_ins8070.o \
-	$(OBJS_cdp1802)               dis_cdp1802.o \
+	$(OBJS_cdp1802) asm_cdp1802.o dis_cdp1802.o \
 	$(OBJS_tms9900) asm_tms9900.o dis_tms9900.o \
 	$(OBJS_mc68000) asm_mc68000.o dis_mc68000.o
 
@@ -214,6 +215,8 @@ test_dis_ins8060: test_dis_ins8060.o dis_ins8060.o $(OBJS_ins8060) $(OBJS_dis)
 test_asm_ins8070: test_asm_ins8070.o asm_ins8070.o $(OBJS_ins8070) $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_ins8070: test_dis_ins8070.o dis_ins8070.o $(OBJS_ins8070) $(OBJS_dis)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_asm_cdp1802: test_asm_cdp1802.o asm_cdp1802.o $(OBJS_cdp1802) $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_cdp1802: test_dis_cdp1802.o dis_cdp1802.o $(OBJS_cdp1802) $(OBJS_dis)
 	$(CXX) -o $@ $(CXXFLAGS) $^
