--- a/test/Makefile
+++ b/test/Makefile
@@ -160,9 +160,10 @@ TEST_OBJS= \
 
 TESTS=$(TEST_OBJS:.o=)
 
-OBJS_asm = asm_base.o value_parser.o test_asserter.o
-OBJS_dis = dis_base.o value_formatter.o test_asserter.o test_memory.o test_dis_helper.o
-OBJS_gen = dis_base.o value_formatter.o test_memory.o text_buffer.o cli_listing.o
+OBJS_asm  = asm_base.o value_parser.o test_asserter.o test_asm_helper.o
+OBJS_dis  = dis_base.o value_formatter.o test_asserter.o test_memory.o test_dis_helper.o
+OBJS_expr = value_parser.o value_formatter.o test_memory.o test_asserter.o
+OBJS_gen  = dis_base.o value_formatter.o test_memory.o text_buffer.o cli_listing.o
 OBJS_mc6809  = table_mc6809.o  reg_mc6809.o
 OBJS_mc6800  = table_mc6800.o  reg_mc6800.o
 OBJS_mos6502 = table_mos6502.o reg_mos6502.o
@@ -234,11 +235,11 @@ test_asm_mc68000: test_asm_mc68000.o asm_mc68000.o $(OBJS_mc68000) $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_mc68000: test_dis_mc68000.o dis_mc68000.o $(OBJS_mc68000) $(OBJS_dis)
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_expr_moto:  test_expr_moto.o    $(OBJS_asm) $(OBJS_dis)
+test_expr_moto:  test_expr_moto.o    $(OBJS_expr)
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_expr_intel:  test_expr_intel.o  $(OBJS_asm) $(OBJS_dis)
+test_expr_intel:  test_expr_intel.o  $(OBJS_expr)
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_expr_cstyle: test_expr_cstyle.o $(OBJS_asm) $(OBJS_dis)
+test_expr_cstyle: test_expr_cstyle.o $(OBJS_expr)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 
 gen_mc6809:  gen_mc6809.o  dis_mc6809.o  $(OBJS_mc6809)  $(OBJS_gen)
