--- a/examples/dis_tms9900/platformio.ini
+++ b/examples/dis_tms9900/platformio.ini
@@ -13,7 +13,7 @@ src_dir = .
 default_envs = promicro16, nano_every, nano_33_iot
 
 [env]
-lib_deps = tgtakaoka/libcli@1.0.4
+lib_deps = tgtakaoka/libcli@1.0.4, tgtakaoka/libasm
 
 [env:promicro16]
 platform = atmelavr
