--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -16,6 +16,7 @@
 ARCHS = \
 	mc6809  \
 	mc6800  \
+	mc6805  \
 	mos6502 \
 	i8048   \
 	i8051   \
@@ -40,7 +41,8 @@ endef
 
 # target list for each architecture.
 TGT_mc6809  = mc6809 hd6309
-TGT_mc6800  = mc6800 mc6801 mc68hc05 mc68hc11 hd6301
+TGT_mc6800  = mc6800 mc6801 mc68hc11 hd6301
+TGT_mc6805  = mc68hc05
 TGT_mos6502 = mos6502 g65sc02 r65c02 w65c02s w65c816
 TGT_i8048   = i8039 i8048 i80c39 i80c48 msm80c39 msm80c48
 TGT_i8051   = i8051
@@ -63,9 +65,9 @@ CPU_mc6809   = 6809
 CPU_hd6309   = 6309
 CPU_mc6800   = 6800
 CPU_mc6801   = 6801
-CPU_mc68hc05 = 68hc05
 CPU_mc68hc11 = 6811
 CPU_hd6301   = 6301
+CPU_mc68hc05 = 68hc05
 CPU_mos6502  = 6502
 CPU_g65sc02  = 65SC02
 CPU_r65c02   = 65C02
@@ -106,7 +108,7 @@ CPU_ns32000  = ns32032
 CPU_ns32k    = ns32032
 
 # targets with Motorola S19 format
-S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) mos6502 g65sc02 r65c02 w65c02s m6811
+S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) $(TGT_mc6805) mos6502 g65sc02 r65c02 w65c02s m6811
 # targets with Motorola S28 format
 S28_OUTS = $(TGT_mc68000) m68k w65c816 w65c816_m0x0 w65c816_m0x1 w65c816_m1x0 w65c816_m1x1
 # targets with Intel32 (32bit address) format
